syntax = "proto3";
package nibiru.epochs.v1;

import "gogoproto/gogo.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/NibiruChain/nibiru/v2/x/epochs/types";

message EpochInfo {
  // A string identifier for the epoch. e.g. "15min" or "1hour"
  string identifier = 1;

  // When the epoch repetitino should start.
  google.protobuf.Timestamp start_time = 2 [
    (gogoproto.stdtime) = true,
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"start_time\""
  ];

  // How long each epoch lasts for.
  google.protobuf.Duration duration = 3 [
    (gogoproto.nullable) = false,
    (gogoproto.stdduration) = true,
    (gogoproto.jsontag) = "duration,omitempty",
    (gogoproto.moretags) = "yaml:\"duration\""
  ];

  // The current epoch number, starting from 1.
  uint64 current_epoch = 4;

  // The start timestamp of the current epoch.
  google.protobuf.Timestamp current_epoch_start_time = 5 [
    (gogoproto.stdtime) = true,
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"current_epoch_start_time\""
  ];

  // Whether or not this epoch has started. Set to true if current blocktime >=
  // start_time.
  bool epoch_counting_started = 6;

  // The block height at which the current epoch started at.
  int64 current_epoch_start_height = 7;
}
